# crate-shop

./: .gitignore  README.md
client/src/: Main.elm
server/: .env  Cargo.toml  config.ron
server/migrations/2019-10-30-163408_create_products/: up.sql
server/src/: main.rs  media.rs  products.rs  schema.rs
www/: index.html
