[package]
name = "server"
version = "0.1.0"
authors = ["Jan Steffens <jan-steffens@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
actix-files = "*"

orientdb-client = "*"

ron = "*"
futures = "*"
env_logger = "*"
serde = { version = "1", features = ["serde_derive"] }

[dev-dependencies]
serde_bytes = "0.11"
serde_json = "1"