[package]
name = "server"
version = "0.1.0"
authors = ["Jan Steffens <jan-steffens@live.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
uuid = { version = "0.6.5", features = ["v4", "serde"] }
env_logger = "0.7.1"
futures = "0.1.29"

serde = "1.0.102"
serde_json = "1.0.41"
serde_derive = "1.0.102"

actix-web = "1.0.8"
actix-files = "0.1.6"

glob = "0.3.0"

[dependencies.diesel]
version = "1.4.3"
features = ["postgres", "uuid", "r2d2"]